# journal-trade

./: .dockerignore  .env.example  .gitignore  =1.0.0  AGENTS.md  AI_TRADING_PLAN.md  Dockerfile  MACRO_TERMINAL_ANALYSIS.md  MACRO_TERMINAL_MODIFICATION_PLAN.md  PROJECT_SCAN.md  TESTING_GUIDE.md  implementation_plan_journal_trading  macro-terminal-logic.md  package-lock.json  package.json  railway.json  skills-lock.json  stitch-prompt-hunter-trades.md  walkthrough.md
.claude/: settings.local.json
.kilo/: LESSONS.md  MEMORY.md  RULES.md  kilo.json  package-lock.json
ai_trade_review/: code.html
akses_ditolak_access_denied/: code.html
analitik_analytics/: code.html
catat_trade_trade_logger/: code.html
dasbor_dashboard/: code.html
docs/: AI_PROVIDER_STRATEGY.md  API_REFERENCE.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
gabung_komunitas_discord/: code.html
konfirmasi_otorisasi_discord/: code.html
manajer_playbook/: code.html
masuk_login_with_discord/: code.html
onboarding_wizard/: code.html
otorisasi_discord/: code.html
panduan_penggunaan_platform/: code.html
pengaturan_settings/: code.html
pilih_broker_modal/: code.html
server/: .env.example  check-db.ts  clear-ai-reviews.ts  clear-cache.ts  db_clean.ts  drizzle.config.ts  install-mcp.sh  install-pip.ps1  install-uv.ps1  install.ps1  output.txt  package-lock.json  package.json  reset-db.ts  setup-mcp.bat  test.ts  (+18 more)
server/mcp-mt5-server/: Hunter Trades AI Trading.spec  Mulai_AI_Trading.spec  build.bat  gui.py  pyproject.toml  requirements.txt  server.py
(+318 files in other folders)
